src/rs4lk/grammar/iosxr/IosXrParser.py
# Generated from IosXr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IosXrParser ( Parser ):

    grammarFileName = "IosXr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'interface'", "'preconfigure'", "'ipv4 address'", 
                     "'ipv6 address'", "'encapsulation dot1q'", "'second-dot1q'", 
                     "'shutdown'", "'router bgp'", "'neighbor'", "'remote-as'", 
                     "'update-source'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WORD", "COMMENT", "COMMUNITY", "COMPLEX_WORD", 
                      "COMPLEX_WORD2", "COMPLEX_WORD3", "STRING", "NUMBER", 
                      "IPV4_ADDRESS", "IPV6_ADDRESS", "IPV6_SHORTHAND", 
                      "IPV4_NETWORK", "IPV6_NETWORK", "BOOLEAN", "HEX_QUAD", 
                      "HEX_DIGIT", "WS", "CONTINUED_LINE", "NEWLINE", "ID" ]

    RULE_config = 0
    RULE_section = 1
    RULE_interfaceSection = 2
    RULE_interfaceStatement = 3
    RULE_ipv4Config = 4
    RULE_ipv6Config = 5
    RULE_encapsulationConfig = 6
    RULE_shutdownConfig = 7
    RULE_bgpSection = 8
    RULE_bgpStatement = 9
    RULE_neighbor = 10
    RULE_neighborStatement = 11
    RULE_remoteAs = 12
    RULE_updateSource = 13
    RULE_ipAddress = 14
    RULE_otherConfig = 15
    RULE_otherSection = 16
    RULE_interfaceName = 17
    RULE_value = 18
    RULE_list = 19

    ruleNames =  [ "config", "section", "interfaceSection", "interfaceStatement", 
                   "ipv4Config", "ipv6Config", "encapsulationConfig", "shutdownConfig", 
                   "bgpSection", "bgpStatement", "neighbor", "neighborStatement", 
                   "remoteAs", "updateSource", "ipAddress", "otherConfig", 
                   "otherSection", "interfaceName", "value", "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    WORD=13
    COMMENT=14
    COMMUNITY=15
    COMPLEX_WORD=16
    COMPLEX_WORD2=17
    COMPLEX_WORD3=18
    STRING=19
    NUMBER=20
    IPV4_ADDRESS=21
    IPV6_ADDRESS=22
    IPV6_SHORTHAND=23
    IPV4_NETWORK=24
    IPV6_NETWORK=25
    BOOLEAN=26
    HEX_QUAD=27
    HEX_DIGIT=28
    WS=29
    CONTINUED_LINE=30
    NEWLINE=31
    ID=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(IosXrParser.EOF, 0)

        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IosXrParser.SectionContext)
            else:
                return self.getTypedRuleContext(IosXrParser.SectionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(IosXrParser.NEWLINE)
            else:
                return self.getToken(IosXrParser.NEWLINE, i)

        def getRuleIndex(self):
            return IosXrParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig" ):
                return visitor.visitConfig(self)
            else:
                return visitor.visitChildren(self)




    def config(self):

        localctx = IosXrParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_config)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2273288450) != 0):
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 8, 13, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26]:
                    self.state = 40
                    self.section()
                    pass
                elif token in [31]:
                    self.state = 41
                    self.match(IosXrParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(IosXrParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceSection(self):
            return self.getTypedRuleContext(IosXrParser.InterfaceSectionContext,0)


        def bgpSection(self):
            return self.getTypedRuleContext(IosXrParser.BgpSectionContext,0)


        def otherSection(self):
            return self.getTypedRuleContext(IosXrParser.OtherSectionContext,0)


        def getRuleIndex(self):
            return IosXrParser.RULE_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection" ):
                listener.enterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection" ):
                listener.exitSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection" ):
                return visitor.visitSection(self)
            else:
                return visitor.visitChildren(self)




    def section(self):

        localctx = IosXrParser.SectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_section)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.interfaceSection()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.bgpSection()
                pass
            elif token in [13, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.otherSection()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceName(self):
            return self.getTypedRuleContext(IosXrParser.InterfaceNameContext,0)


        def otherConfig(self):
            return self.getTypedRuleContext(IosXrParser.OtherConfigContext,0)


        def NEWLINE(self):
            return self.getToken(IosXrParser.NEWLINE, 0)

        def interfaceStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IosXrParser.InterfaceStatementContext)
            else:
                return self.getTypedRuleContext(IosXrParser.InterfaceStatementContext,i)


        def getRuleIndex(self):
            return IosXrParser.RULE_interfaceSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceSection" ):
                listener.enterInterfaceSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceSection" ):
                listener.exitInterfaceSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceSection" ):
                return visitor.visitInterfaceSection(self)
            else:
                return visitor.visitChildren(self)




    def interfaceSection(self):

        localctx = IosXrParser.InterfaceSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_interfaceSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(IosXrParser.T__0)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 55
                self.match(IosXrParser.T__1)


            self.state = 58
            self.interfaceName()
            self.state = 59
            self.otherConfig()
            self.state = 60
            self.match(IosXrParser.NEWLINE)
            self.state = 64
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 61
                    self.interfaceStatement() 
                self.state = 66
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ipv4Config(self):
            return self.getTypedRuleContext(IosXrParser.Ipv4ConfigContext,0)


        def NEWLINE(self):
            return self.getToken(IosXrParser.NEWLINE, 0)

        def ipv6Config(self):
            return self.getTypedRuleContext(IosXrParser.Ipv6ConfigContext,0)


        def encapsulationConfig(self):
            return self.getTypedRuleContext(IosXrParser.EncapsulationConfigContext,0)


        def shutdownConfig(self):
            return self.getTypedRuleContext(IosXrParser.ShutdownConfigContext,0)


        def otherConfig(self):
            return self.getTypedRuleContext(IosXrParser.OtherConfigContext,0)


        def getRuleIndex(self):
            return IosXrParser.RULE_interfaceStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceStatement" ):
                listener.enterInterfaceStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceStatement" ):
                listener.exitInterfaceStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceStatement" ):
                return visitor.visitInterfaceStatement(self)
            else:
                return visitor.visitChildren(self)




    def interfaceStatement(self):

        localctx = IosXrParser.InterfaceStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_interfaceStatement)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.ipv4Config()
                self.state = 68
                self.match(IosXrParser.NEWLINE)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.ipv6Config()
                self.state = 71
                self.match(IosXrParser.NEWLINE)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.encapsulationConfig()
                self.state = 74
                self.match(IosXrParser.NEWLINE)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 76
                self.shutdownConfig()
                self.state = 77
                self.match(IosXrParser.NEWLINE)
                pass
            elif token in [13, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 31]:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.otherConfig()
                self.state = 80
                self.match(IosXrParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipv4ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(IosXrParser.WORD)
            else:
                return self.getToken(IosXrParser.WORD, i)

        def getRuleIndex(self):
            return IosXrParser.RULE_ipv4Config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpv4Config" ):
                listener.enterIpv4Config(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpv4Config" ):
                listener.exitIpv4Config(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIpv4Config" ):
                return visitor.visitIpv4Config(self)
            else:
                return visitor.visitChildren(self)




    def ipv4Config(self):

        localctx = IosXrParser.Ipv4ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ipv4Config)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(IosXrParser.T__2)
            self.state = 85
            self.match(IosXrParser.WORD)
            self.state = 86
            self.match(IosXrParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipv6ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IPV6_NETWORK(self):
            return self.getToken(IosXrParser.IPV6_NETWORK, 0)

        def getRuleIndex(self):
            return IosXrParser.RULE_ipv6Config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpv6Config" ):
                listener.enterIpv6Config(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpv6Config" ):
                listener.exitIpv6Config(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIpv6Config" ):
                return visitor.visitIpv6Config(self)
            else:
                return visitor.visitChildren(self)




    def ipv6Config(self):

        localctx = IosXrParser.Ipv6ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ipv6Config)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(IosXrParser.T__3)
            self.state = 89
            self.match(IosXrParser.IPV6_NETWORK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EncapsulationConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(IosXrParser.WORD)
            else:
                return self.getToken(IosXrParser.WORD, i)

        def getRuleIndex(self):
            return IosXrParser.RULE_encapsulationConfig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEncapsulationConfig" ):
                listener.enterEncapsulationConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEncapsulationConfig" ):
                listener.exitEncapsulationConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEncapsulationConfig" ):
                return visitor.visitEncapsulationConfig(self)
            else:
                return visitor.visitChildren(self)




    def encapsulationConfig(self):

        localctx = IosXrParser.EncapsulationConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_encapsulationConfig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(IosXrParser.T__4)
            self.state = 92
            self.match(IosXrParser.WORD)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 93
                self.match(IosXrParser.T__5)
                self.state = 94
                self.match(IosXrParser.WORD)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShutdownConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IosXrParser.RULE_shutdownConfig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShutdownConfig" ):
                listener.enterShutdownConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShutdownConfig" ):
                listener.exitShutdownConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShutdownConfig" ):
                return visitor.visitShutdownConfig(self)
            else:
                return visitor.visitChildren(self)




    def shutdownConfig(self):

        localctx = IosXrParser.ShutdownConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_shutdownConfig)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(IosXrParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BgpSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(IosXrParser.WORD, 0)

        def NEWLINE(self):
            return self.getToken(IosXrParser.NEWLINE, 0)

        def bgpStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IosXrParser.BgpStatementContext)
            else:
                return self.getTypedRuleContext(IosXrParser.BgpStatementContext,i)


        def getRuleIndex(self):
            return IosXrParser.RULE_bgpSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBgpSection" ):
                listener.enterBgpSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBgpSection" ):
                listener.exitBgpSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBgpSection" ):
                return visitor.visitBgpSection(self)
            else:
                return visitor.visitChildren(self)




    def bgpSection(self):

        localctx = IosXrParser.BgpSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bgpSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(IosXrParser.T__7)
            self.state = 100
            self.match(IosXrParser.WORD)
            self.state = 101
            self.match(IosXrParser.NEWLINE)
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 102
                    self.bgpStatement() 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BgpStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def neighbor(self):
            return self.getTypedRuleContext(IosXrParser.NeighborContext,0)


        def otherConfig(self):
            return self.getTypedRuleContext(IosXrParser.OtherConfigContext,0)


        def NEWLINE(self):
            return self.getToken(IosXrParser.NEWLINE, 0)

        def getRuleIndex(self):
            return IosXrParser.RULE_bgpStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBgpStatement" ):
                listener.enterBgpStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBgpStatement" ):
                listener.exitBgpStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBgpStatement" ):
                return visitor.visitBgpStatement(self)
            else:
                return visitor.visitChildren(self)




    def bgpStatement(self):

        localctx = IosXrParser.BgpStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bgpStatement)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.neighbor()
                pass
            elif token in [13, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.otherConfig()
                self.state = 110
                self.match(IosXrParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NeighborContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ipAddress(self):
            return self.getTypedRuleContext(IosXrParser.IpAddressContext,0)


        def NEWLINE(self):
            return self.getToken(IosXrParser.NEWLINE, 0)

        def neighborStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IosXrParser.NeighborStatementContext)
            else:
                return self.getTypedRuleContext(IosXrParser.NeighborStatementContext,i)


        def getRuleIndex(self):
            return IosXrParser.RULE_neighbor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeighbor" ):
                listener.enterNeighbor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeighbor" ):
                listener.exitNeighbor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeighbor" ):
                return visitor.visitNeighbor(self)
            else:
                return visitor.visitChildren(self)




    def neighbor(self):

        localctx = IosXrParser.NeighborContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_neighbor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(IosXrParser.T__8)
            self.state = 115
            self.ipAddress()
            self.state = 116
            self.match(IosXrParser.NEWLINE)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 117
                    self.neighborStatement() 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NeighborStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def remoteAs(self):
            return self.getTypedRuleContext(IosXrParser.RemoteAsContext,0)


        def updateSource(self):
            return self.getTypedRuleContext(IosXrParser.UpdateSourceContext,0)


        def otherConfig(self):
            return self.getTypedRuleContext(IosXrParser.OtherConfigContext,0)


        def NEWLINE(self):
            return self.getToken(IosXrParser.NEWLINE, 0)

        def getRuleIndex(self):
            return IosXrParser.RULE_neighborStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeighborStatement" ):
                listener.enterNeighborStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeighborStatement" ):
                listener.exitNeighborStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeighborStatement" ):
                return visitor.visitNeighborStatement(self)
            else:
                return visitor.visitChildren(self)




    def neighborStatement(self):

        localctx = IosXrParser.NeighborStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_neighborStatement)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.remoteAs()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.updateSource()
                pass
            elif token in [13, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 31]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.otherConfig()
                self.state = 126
                self.match(IosXrParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RemoteAsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(IosXrParser.WORD, 0)

        def NEWLINE(self):
            return self.getToken(IosXrParser.NEWLINE, 0)

        def getRuleIndex(self):
            return IosXrParser.RULE_remoteAs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRemoteAs" ):
                listener.enterRemoteAs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRemoteAs" ):
                listener.exitRemoteAs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemoteAs" ):
                return visitor.visitRemoteAs(self)
            else:
                return visitor.visitChildren(self)




    def remoteAs(self):

        localctx = IosXrParser.RemoteAsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_remoteAs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(IosXrParser.T__9)
            self.state = 131
            self.match(IosXrParser.WORD)
            self.state = 132
            self.match(IosXrParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateSourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceName(self):
            return self.getTypedRuleContext(IosXrParser.InterfaceNameContext,0)


        def NEWLINE(self):
            return self.getToken(IosXrParser.NEWLINE, 0)

        def getRuleIndex(self):
            return IosXrParser.RULE_updateSource

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateSource" ):
                listener.enterUpdateSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateSource" ):
                listener.exitUpdateSource(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateSource" ):
                return visitor.visitUpdateSource(self)
            else:
                return visitor.visitChildren(self)




    def updateSource(self):

        localctx = IosXrParser.UpdateSourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_updateSource)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(IosXrParser.T__10)
            self.state = 135
            self.interfaceName()
            self.state = 136
            self.match(IosXrParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IpAddressContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(IosXrParser.WORD, 0)

        def IPV4_ADDRESS(self):
            return self.getToken(IosXrParser.IPV4_ADDRESS, 0)

        def IPV6_ADDRESS(self):
            return self.getToken(IosXrParser.IPV6_ADDRESS, 0)

        def getRuleIndex(self):
            return IosXrParser.RULE_ipAddress

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpAddress" ):
                listener.enterIpAddress(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpAddress" ):
                listener.exitIpAddress(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIpAddress" ):
                return visitor.visitIpAddress(self)
            else:
                return visitor.visitChildren(self)




    def ipAddress(self):

        localctx = IosXrParser.IpAddressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_ipAddress)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 6299648) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OtherConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
